<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/scan"
        android:title="@string/scan" />
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        tools:context=".view.MainActivity"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <!--  collapseActionView action bar to collapse -->

</menu>